ChangeLog for ARQ
=================

==== ARQ 2.9.1

+ SPARQL 1.1: Complete scope tracking of variables (JENA-142)
+ Faster writing of XML and JSON results formats (JENA-178)


==== ARQ 2.8.9 / 2.9.0
** Java 6 is now required for running ARQ.

+ SPARQL 1.1: Provides \-escapes for characters ~.-!$&'()*+,;=:/?#@% 
              in local part of prefix names 
+ SPARQl 1.1: Allow %xx in the local part of prefix names
+ SPARQL 1.1 / RDF 1.1 : DATATYPE(literal-with-lang) is now rdf:langString, not an error.
+ DatasetFactory: perferred methods for an in-memory dataset are:
     create() -- will automatically add in-memory named graphs  
     createFixed() -- needs explicitly added extra graph  
+ BUG FIX: Mis-execution of GRAPH ?g { .. } where ?g used inside { .. } (JENA-154)
+ Bug fix: ResourceUtils.renameResource() no longer uses Iterator.remove() (JENA-76)
+ Bug fix: Query objects with aggregators cannot be reused (JENA-120)
+ REGEX now accepts xsd:string and literals with language tags in the first argument. 
+ Add function STRBEFORE, STRAFTER and REPLACE for SPARQL 1.1
+ Add function UUID  [ARQ language only]  
+ Remove LARQ from ARQ.  LARQ is now a separate Jena module.
+ Fix reuse of query objects (aggregation used shared state) (JENA-121)
+ Spill to disk update (enable with ARQ.spillToDiskThreshold) (JENA-45)
+ External sort (enable with ARQ.spillToDiskThreshold) (JENA-44) 
+ Remove RDQL from ARQ (code in Archive/ in SVN -- will not be updated) 
+ ResultSetUtils.union(ResultSet ... sets)
+ Add optimization for DISTINCT/ORDER BY/LIMIT N (JENA-108)
+ Add optimization for DISTINCT/ORDER BY (JENA-90)
+ Add optimization for ORDER BY/LIMIT N (JENA-89)
+ General upgrade of dependent systems (not Lucene - see LARQ module for use with Lucene 3)
+ Introduce "bindings IO", a subsystem for efficient reading and writing of result bindings. 
+ Make CONCAT follow the SPARQL 1.1 spec properly. 