@@ -23,6 +23,7 @@ import java.io.InputStream ;
 import java.util.ArrayList ;
 import java.util.Iterator ;
 import java.util.List ;
+import java.util.Map ;
 import java.util.concurrent.TimeUnit ;
 
 import org.openjena.atlas.io.IO ;
@@ -34,6 +35,7 @@ import org.slf4j.LoggerFactory ;
 import com.hp.hpl.jena.query.ARQ ;
 import com.hp.hpl.jena.query.Dataset ;
 import com.hp.hpl.jena.query.Query ;
+import com.hp.hpl.jena.query.QueryExecException ;
 import com.hp.hpl.jena.query.QueryExecution ;
 import com.hp.hpl.jena.query.QuerySolution ;
 import com.hp.hpl.jena.query.ResultSet ;
@@ -251,6 +253,7 @@ public class QueryEngineHTTP implements QueryExecution
             throw new ARQException("HTTP execution already closed") ;
         
         HttpQuery httpQuery = new HttpQuery(service) ;
+        httpQuery.merge(getServiceParams(service, context)) ;
         httpQuery.addParam(HttpParams.pQuery, queryString );
         
         for ( Iterator<String> iter = defaultGraphURIs.iterator() ; iter.hasNext() ; )
@@ -271,6 +274,31 @@ public class QueryEngineHTTP implements QueryExecution
         return httpQuery ;
     }
     
+    // This is to allow setting additional/optional query parameters on a per SERVICE level, see: JENA-195
+    protected static Params getServiceParams(String serviceURI, Context context) throws QueryExecException
+    {
+        Params params = new Params();
+        @SuppressWarnings("unchecked")
+        Map<String, Map<String,List<String>>> serviceParams = (Map<String, Map<String,List<String>>>)context.get(ARQ.serviceParams) ;
+        if ( serviceParams != null ) 
+        {
+            Map<String,List<String>> paramsMap = serviceParams.get(serviceURI) ;
+            if ( paramsMap != null )
+            {
+                for (String param : paramsMap.keySet()) 
+                {   
+                    if ( HttpParams.pQuery.equals(param) ) 
+                        throw new QueryExecException("ARQ serviceParams overrides the 'query' SPARQL protocol parameter") ;
+
+                    List<String> values = paramsMap.get(param) ;
+                    for (String value : values) 
+                        params.addParam(param, value) ;
+                }
+            }            
+        }
+        return params;
+    }
+
     public void cancel() { finished = true ; }
     
     @Override
