@@ -5,6 +5,7 @@ ChangeLog for ARQ
 
 + SPARQL 1.1: Complete scope tracking of variables (JENA-142)
 + Faster writing of XML and JSON results formats (JENA-178)
++ Support for SERVICE with additional parameters (JENA-195)  
 
 
 ==== ARQ 2.8.9 / 2.9.0
